--- a/Lab 2/Lab2_AI.ipynb
+++ b/Lab 2/Lab2_AI.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        " 1.449]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        " 23: 1.449}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {
     "id": "XhgoWxJGuguk"
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {
     "id": "ezLUEAgkugu5"
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {
     "id": "CLYRkzHSugvR"
    },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {
     "id": "U8jKwHK8ugvc"
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {
     "id": "1hPZ7q3rugvn"
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {
     "id": "QCfpoVveugvy"
    },
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "  'Handwritten Digit Recognition with a Back-Propagation Network, Yann LeCun et al. (1989), a_id: 293, status: published, rating: Good'])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,11 +717,12 @@
      "output_type": "stream",
      "text": [
       "Please review your submission.\n",
-      "Please review your submission.\n",
       "NeurIPS 2020: \n",
       "2015: \n",
-      "Mr Ian Goodfellow: Generative Adversarial Nets, Mr Ian Goodfellow, Professor of CS Yoshua Bengio et al. (2015), a_id: 5423, status: published, rating: Excelent \n",
-      "Computer Scientist Yann LeCun: Deep Learning, Computer Scientist Yann LeCun, Professor of CS Yoshua Bengio, Mr Geoffrey Hinton et al. (2015), a_id: 14539, status: published, rating: Excellent \n",
+      "Mr Ian Goodfellow: Generative Adversarial Nets, Ian Goodfellow, Yoshua Bengio et al. (2015), a_id: 5423, status: published, rating: Excellent \n",
+      "Computer Scientist Yann LeCun: Deep Learning, Yann LeCun, Yoshua Bengio, Geoffrey Hinton et al. (2015), a_id: 14539, status: published, rating: Excellent \n",
+      "2013: \n",
+      "Mr Razvan Pascanu: On the difficulty of training recurrent neural networks, Razvan Pascanu, Tomas Mikolov, Yoshua Bengio et al. (2013), a_id: 5063, status: published, rating: Excellent \n",
       "\n"
      ]
     },
@@ -731,7 +732,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\ '\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "C:\\Users\\Mario Sakka\\AppData\\Local\\Temp\\ipykernel_2752\\3606539281.py:2: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "C:\\Users\\Mario Sakka\\AppData\\Local\\Temp\\ipykernel_21632\\3978242315.py:2: SyntaxWarning: invalid escape sequence '\\ '\n",
       "  \"\"\"\n"
      ]
     }
@@ -808,49 +809,16 @@
     "        return result\n",
     "\n",
     "\n",
-    "conf = ScientificConferenceUpdate(\"NeurIPS\", 2020)\n",
+    "conf = ScientificConferenceUpdate(\"NeurIPS\", 2020)# no manuscripts (empty section)\n",
     "\n",
-    "gan = Paper(\n",
-    "    authors=[\"Mr Ian Goodfellow\", \"Professor of CS Yoshua Bengio\"],\n",
-    "    title=\"Generative Adversarial Nets\",\n",
-    "    a_id=5423,\n",
-    "    status=\"published\",\n",
-    "    year=2015,\n",
-    "    peer_rating=\"Excelent\"   # note: spec also accepts this misspelling\n",
-    ")\n",
     "\n",
-    "deep = Paper(\n",
-    "    authors=[\"Computer Scientist Yann LeCun\", \"Professor of CS Yoshua Bengio\", \"Mr Geoffrey Hinton\"],\n",
-    "    title=\"Deep Learning\",\n",
-    "    a_id=14539,\n",
-    "    status=\"published\",\n",
-    "    year=2015,\n",
-    "    peer_rating=\"Excellent\"\n",
-    ")\n",
     "\n",
-    "softmax_bad_rating = Paper(\n",
-    "    authors=[\"Mr Geoffrey Hinton\"],\n",
-    "    title=\"Gated Softmax Classification\",\n",
-    "    a_id=3895,\n",
-    "    status=\"published\",\n",
-    "    year=2010,\n",
-    "    peer_rating=\"Good\"       # should be rejected (not Excellent)\n",
-    ")\n",
     "\n",
-    "rnn_bad_status = Paper(\n",
-    "    authors=[\"Mr Razvan Pascanu\", \"Mr Tomas Mikolov\", \"Professor of CS Yoshua Bengio\"],\n",
-    "    title=\"On the difficulty of training recurrent neural networks\",\n",
-    "    a_id=5063,\n",
-    "    status=\"submitted\",      # should be rejected (not published)\n",
-    "    year=2013,\n",
-    "    peer_rating=\"Excellent\"\n",
-    ")\n",
-    "\n",
-    "conf.add_manuscript(gan,  \"Mr Ian Goodfellow\")\n",
-    "conf.add_manuscript(deep, \"Computer Scientist Yann LeCun\")\n",
-    "conf.add_manuscript(softmax_bad_rating, \"Mr Geoffrey Hinton\")  # expect: Please review your submission.\n",
-    "conf.add_manuscript(rnn_bad_status,     \"Mr Razvan Pascanu\")   # expect: Please review your submission.\n",
-    "conf.add_manuscript(gan,  \"Mr Ian Goodfellow\")                 # duplicate -> ignored\n",
+    "conf.add_manuscript(papers[2],  \"Mr Ian Goodfellow\")# Generative Adversarial Nets (2015, Excellent) -> accept\n",
+    "conf.add_manuscript(papers[0], \"Computer Scientist Yann LeCun\")# Deep Learning (2015, Excellent) -> accept\n",
+    "conf.add_manuscript(papers[4], \"Mr Geoffrey Hinton\")# Gated Softmax (2010, Good) -> reject\n",
+    "conf.add_manuscript(papers[1],  \"Mr Razvan Pascanu\")# On the difficulty... (2013, Excellent) -> accept (adds 2013 section)\n",
+    "conf.add_manuscript(papers[2],  \"Mr Ian Goodfellow\")# duplicate -> ignored\n",
     "\n",
     "print(conf)\n"
    ]
