--- a/Lab 2/Lab2_AI.ipynb
+++ b/Lab 2/Lab2_AI.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        " 1.449]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        " 23: 1.449}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "id": "XhgoWxJGuguk"
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "id": "ezLUEAgkugu5"
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "id": "CLYRkzHSugvR"
    },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "id": "U8jKwHK8ugvc"
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "id": "1hPZ7q3rugvn"
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {
     "id": "QCfpoVveugvy"
    },
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "  'Handwritten Digit Recognition with a Back-Propagation Network, Yann LeCun et al. (1989), a_id: 293, status: published, rating: Good'])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "id": "EDsHycjEugv_"
    },
@@ -730,10 +730,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:2: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:2: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "C:\\Users\\Mario Sakka\\AppData\\Local\\Temp\\ipykernel_21632\\3978242315.py:2: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  \"\"\"\n"
+      "<>:8: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:8: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/tmp/ipykernel_18681/2345382612.py:8: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  w\\ the new object: similar to `this`\n"
      ]
     }
    ],
@@ -831,7 +831,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ai_labs_env",
    "language": "python",
    "name": "python3"
   },
@@ -845,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
