--- a/Lab 3/Lab3_AI_A_Star.ipynb
+++ b/Lab 3/Lab3_AI_A_Star.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,6 +418,7 @@
    ],
    "source": [
     "from heapq import heappop, heappush\n",
+    "# smallest elements are to the most left, they are visited first (popped from queue)\n",
     "\n",
     "priority_queue = []\n",
     "heappush(priority_queue, ((1, 2), 'cost_so_far: 2'))\n",
