--- a/Lab 4/Lab4.ipynb
+++ b/Lab 4/Lab4.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -86,6 +86,8 @@
     "# The empty cells are marked with 1 meaning dirty cell.\n",
     "env = [[1 for x in range(width)] for y in range(height)]\n",
     "\n",
+    "\n",
+    "\n",
     "# Start point.\n",
     "start = (0, 0)\n",
     "\n",
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -109,10 +111,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:7: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:7: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "/tmp/ipykernel_1938300/2809560939.py:7: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  - the cleanness of a cell is marked w\\ 0 or 1 for the computed effect\n"
+      "<>:4: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "C:\\Users\\Mario Sakka\\AppData\\Local\\Temp\\ipykernel_9924\\2809560939.py:4: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  \"\"\"\n"
      ]
     },
     {
@@ -121,7 +123,7 @@
        "\"\\nThe last line can be read as:\\n    - the vacuum doesn't move (0,0) in either case\\n    - if the current cell is clean, the cell can either remain clean (0, -1) or\\n    get dirty (1, -1)\\n    - if the cell is dirty, the current cell can be cleaned (0, -1)\\n    or both the current cell and the cell on its right can be cleaned (0, 0)\\n\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "id": "W2V8Dr4jxgLA"
    },
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -210,7 +212,7 @@
        "-4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "id": "bO8mCuh6xgLb"
    },
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "id": "nEoGWq3_xgL7"
    },
@@ -351,7 +353,7 @@
     "            return\n",
     "        self.children[move] = child\n",
     "        child.parent = self\n",
-    "      \n",
+    "\n",
     "    def __str__(self):\n",
     "        tag = ''\n",
     "        if self.tag is not None:\n",
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "id": "FPX_K7oSxgMJ"
    },
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {
     "id": "OCxpdLckxgMW",
     "outputId": "ef1a5270-4b18-48f8-ce6e-6d5cf26ee9e0"
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "id": "MET1iiPqxgMj"
    },
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "id": "BRO41e6PxgMx"
    },
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "id": "EQmSv_VSxgND"
    },
@@ -596,12 +598,20 @@
    },
    "outputs": [],
    "source": [
-    "def create_tree(node, viz_states, deterministic):\n",
+    "def create_tree(node: Node, viz_states, deterministic: bool):\n",
     "    if env_clean(node.env):\n",
     "        node.tag = 'SOLVED'\n",
     "        return\n",
     "\n",
     "    key = (node.state, tuple(tuple(r) for r in node.env))\n",
+    "    \"\"\"\n",
+    "    Vacuum on the right cell ((1,0), (0,1))\n",
+    "    \n",
+    "    \n",
+    "    1 1 1 1 \n",
+    "    1 1 0 1\n",
+    "    0 0 1 1\n",
+    "    \"\"\"\n",
     "    if key in viz_states:\n",
     "        node.tag = 'CYCLE'\n",
     "        return\n",
@@ -612,17 +622,6 @@
     "        new_children = create_nodes_from_move(node, move, deterministic, give_tag=None)\n",
     "        for ch in new_children:\n",
     "            create_tree(ch, local_viz, deterministic)\n",
-    "\n",
-    "    for child in node.children.values():\n",
-    "        if child.op == 'AND':\n",
-    "            ctags = [gc.tag for gc in child.children.values()]\n",
-    "            if ctags:\n",
-    "                if all(t == 'SOLVED' for t in ctags):\n",
-    "                    child.tag = 'SOLVED'\n",
-    "                elif any(t == 'FAIL' for t in ctags):\n",
-    "                    child.tag = 'FAIL'\n",
-    "                elif all(t == 'CYCLE' for t in ctags):\n",
-    "                    child.tag = 'FAIL'\n",
     "\n",
     "    if node.tag is None:\n",
     "        tags = [child.tag for child in node.children.values()]\n",
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -658,15 +657,15 @@
       "         -> Left <OR> 0 : [[1, 0]] SOLVED\n",
       "            -> Right <OR> 1 : [[1, 0]] CYCLE\n",
       "            -> Clean <OR> 0 : [[0, 0]] SOLVED\n",
-      "         -> Clean <AND> -  FAIL\n",
+      "         -> Clean <AND> - \n",
       "            -> 0 <OR> 1 : [[1, 0]] CYCLE\n",
       "            -> 1 <OR> 1 : [[1, 1]] CYCLE\n",
-      "   -> Clean <AND> -  SOLVED\n",
+      "   -> Clean <AND> - \n",
       "      -> 0 <OR> 0 : [[0, 1]] SOLVED\n",
       "         -> Right <OR> 1 : [[0, 1]] SOLVED\n",
       "            -> Left <OR> 0 : [[0, 1]] CYCLE\n",
       "            -> Clean <OR> 1 : [[0, 0]] SOLVED\n",
-      "         -> Clean <AND> -  FAIL\n",
+      "         -> Clean <AND> - \n",
       "            -> 0 <OR> 0 : [[0, 1]] CYCLE\n",
       "            -> 1 <OR> 0 : [[1, 1]] CYCLE\n",
       "      -> 1 <OR> 0 : [[0, 0]] SOLVED\n"
@@ -686,7 +685,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "ai_labs_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
