--- a/Lab 4/Lab4.ipynb
+++ b/Lab 4/Lab4.ipynb
@@ -598,26 +598,31 @@
    },
    "outputs": [],
    "source": [
-    "def create_tree(node: Node, viz_states, deterministic: bool):\n",
+    "State = tuple[int, int]\n",
+    "EnvRow = tuple[int, ...]\n",
+    "Environment = tuple[EnvRow, ...]\n",
+    "StateKey = tuple[State, Environment]\n",
+    "\n",
+    "def create_tree(node: Node, viz_states: list[StateKey], deterministic: bool) -> None:\n",
     "    if env_clean(node.env):\n",
     "        node.tag = 'SOLVED'\n",
     "        return\n",
-    "\n",
-    "    key = (node.state, tuple(tuple(r) for r in node.env))\n",
-    "\n",
+    "    \n",
+    "    key: StateKey = (node.state, tuple(tuple(r) for r in node.env))\n",
+    "    \n",
     "    if key in viz_states:\n",
     "        node.tag = 'CYCLE'\n",
     "        return\n",
     "\n",
-    "    local_viz = viz_states + [key]\n",
+    "    local_viz: list[StateKey] = viz_states + [key]\n",
     "\n",
     "    for move in moves:\n",
-    "        new_children = create_nodes_from_move(node, move, deterministic, give_tag=None)\n",
+    "        new_children: list[Node] = create_nodes_from_move(node, move, deterministic, give_tag=None)\n",
     "        for ch in new_children:\n",
     "            create_tree(ch, local_viz, deterministic)\n",
     "\n",
     "    if node.tag is None:\n",
-    "        tags = [child.tag for child in node.children.values()]\n",
+    "        tags: list[str | None] = [child.tag for child in node.children.values()]\n",
     "        if node.op == 'OR':\n",
     "            if any(t == 'SOLVED' for t in tags):\n",
     "                node.tag = 'SOLVED'\n",
@@ -631,7 +636,7 @@
     "            elif any(t == 'FAIL' for t in tags):\n",
     "                node.tag = 'FAIL'\n",
     "            elif all(t == 'CYCLE' for t in tags if t is not None) and len(tags) > 0:\n",
-    "                node.tag = 'FAIL'\n"
+    "                node.tag = 'FAIL'"
    ]
   },
   {
@@ -678,7 +683,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ai_labs_env",
    "language": "python",
    "name": "python3"
   },
@@ -692,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
