fixed lab 4, started lab 5

--- a/Lab 4/Lab4.ipynb
+++ b/Lab 4/Lab4.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -111,10 +111,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:4: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "<>:4: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "C:\\Users\\Mario Sakka\\AppData\\Local\\Temp\\ipykernel_9924\\2809560939.py:4: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "  \"\"\"\n"
+      "<>:7: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:7: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/tmp/ipykernel_9875/2809560939.py:7: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  - the cleanness of a cell is marked w\\ 0 or 1 for the computed effect\n"
      ]
     },
     {
@@ -123,7 +123,7 @@
        "\"\\nThe last line can be read as:\\n    - the vacuum doesn't move (0,0) in either case\\n    - if the current cell is clean, the cell can either remain clean (0, -1) or\\n    get dirty (1, -1)\\n    - if the cell is dirty, the current cell can be cleaned (0, -1)\\n    or both the current cell and the cell on its right can be cleaned (0, 0)\\n\""
       ]
      },
-     "execution_count": 31,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {
     "id": "W2V8Dr4jxgLA"
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -212,7 +212,7 @@
        "-4"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {
     "id": "bO8mCuh6xgLb"
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {
     "id": "nEoGWq3_xgL7"
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {
     "id": "FPX_K7oSxgMJ"
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {
     "id": "OCxpdLckxgMW",
     "outputId": "ef1a5270-4b18-48f8-ce6e-6d5cf26ee9e0"
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {
     "id": "MET1iiPqxgMj"
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {
     "id": "BRO41e6PxgMx"
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {
     "id": "EQmSv_VSxgND"
    },
@@ -621,27 +621,32 @@
     "        for ch in new_children:\n",
     "            create_tree(ch, local_viz, deterministic)\n",
     "\n",
+    "    # create_nodes_from_move doesn't return AND nodes, loop through them here\n",
+    "    for child in node.children.values():\n",
+    "        if child.op == 'AND':\n",
+    "            ctags = [gc.tag for gc in child.children.values()]\n",
+    "            if ctags:\n",
+    "                if all(t == 'SOLVED' for t in ctags):\n",
+    "                    child.tag = 'SOLVED'\n",
+    "                elif any(t == 'FAIL' for t in ctags):\n",
+    "                    child.tag = 'FAIL'\n",
+    "                elif all(t == 'CYCLE' for t in ctags):\n",
+    "                    child.tag = 'FAIL'\n",
+    "\n",
     "    if node.tag is None:\n",
     "        tags: list[str | None] = [child.tag for child in node.children.values()]\n",
-    "        if node.op == 'OR':\n",
-    "            if any(t == 'SOLVED' for t in tags):\n",
-    "                node.tag = 'SOLVED'\n",
-    "            elif all(t == 'CYCLE' for t in tags if t is not None) and len(tags) > 0:\n",
-    "                node.tag = 'CYCLE'\n",
-    "            elif all(t in ('FAIL', 'CYCLE') for t in tags if t is not None) and len(tags) > 0:\n",
-    "                node.tag = 'FAIL'\n",
-    "        else:  # AND node\n",
-    "            if all(t == 'SOLVED' for t in tags if t is not None) and len(tags) > 0:\n",
-    "                node.tag = 'SOLVED'\n",
-    "            elif any(t == 'FAIL' for t in tags):\n",
-    "                node.tag = 'FAIL'\n",
-    "            elif all(t == 'CYCLE' for t in tags if t is not None) and len(tags) > 0:\n",
-    "                node.tag = 'FAIL'"
+    "        \n",
+    "        if any(t == 'SOLVED' for t in tags):\n",
+    "            node.tag = 'SOLVED'\n",
+    "        elif all(t == 'CYCLE' for t in tags if t is not None) and len(tags) > 0:\n",
+    "            node.tag = 'CYCLE'\n",
+    "        elif all(t in ('FAIL', 'CYCLE') for t in tags if t is not None) and len(tags) > 0:\n",
+    "            node.tag = 'FAIL'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -655,15 +660,15 @@
       "         -> Left <OR> 0 : [[1, 0]] SOLVED\n",
       "            -> Right <OR> 1 : [[1, 0]] CYCLE\n",
       "            -> Clean <OR> 0 : [[0, 0]] SOLVED\n",
-      "         -> Clean <AND> - \n",
+      "         -> Clean <AND> -  FAIL\n",
       "            -> 0 <OR> 1 : [[1, 0]] CYCLE\n",
       "            -> 1 <OR> 1 : [[1, 1]] CYCLE\n",
-      "   -> Clean <AND> - \n",
+      "   -> Clean <AND> -  SOLVED\n",
       "      -> 0 <OR> 0 : [[0, 1]] SOLVED\n",
       "         -> Right <OR> 1 : [[0, 1]] SOLVED\n",
       "            -> Left <OR> 0 : [[0, 1]] CYCLE\n",
       "            -> Clean <OR> 1 : [[0, 0]] SOLVED\n",
-      "         -> Clean <AND> - \n",
+      "         -> Clean <AND> -  FAIL\n",
       "            -> 0 <OR> 0 : [[0, 1]] CYCLE\n",
       "            -> 1 <OR> 0 : [[1, 1]] CYCLE\n",
       "      -> 1 <OR> 0 : [[0, 0]] SOLVED\n"
