lab 5 prob done

--- a/Lab 5/Lab5MinMax.ipynb
+++ b/Lab 5/Lab5MinMax.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "--------------------\n",
+      "\n",
       "  |   |  \n",
       "---------\n",
       "  |   |  \n",
@@ -68,6 +71,7 @@
    ],
    "source": [
     "def display_board(board):\n",
+    "    print(f\"\\n{'-'*20}\\n\")\n",
     "    for i in range(0, 9, 3):\n",
     "        print(\" | \".join(board[i:i+3]))\n",
     "        if i < 6:\n",
@@ -77,24 +81,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
     "# the method should return True or False based on who won the game\n",
     "def check_win(board, player):\n",
-    "    # TO DO "
+    "\n",
+    "    winning_lines = [(0,1,2), (3,4,5), (6,7,8), \n",
+    "                     (0,3,6), (1,4,7), (2,5,8), \n",
+    "                     (0,4,8), (2,4,8)\n",
+    "                     ]\n",
+    "    \n",
+    "\n",
+    "    return any(all(board[i] == player for i in line) for line in  winning_lines)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to check for a draw\n",
     "def check_draw(board):\n",
-    "    # TO DO"
+    "    return check_win(board, \"X\") == check_win(board, \"O\") == False and all(cell != \" \" for cell in board)"
    ]
   },
   {
@@ -114,24 +125,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for the minimax algorithm\n",
     "def minimax(board, depth, maximizing_player):\n",
     "    # Base cases: check for terminal states\n",
-    "    if check_win(board, \"O\"):\n",
-    "        return 1\n",
-    "    if check_win(board, \"X\"):\n",
-    "        return -1\n",
+    "    if check_win(board, \"O\"): # AI Wins\n",
+    "        return 10 - depth # Higher estimates will be chosen so good endings will come sooner\n",
+    "    if check_win(board, \"X\"): # Human Wins\n",
+    "        return -10 + depth # Least negative  estimates will be chosen so bad endings are delayed\n",
     "    if check_draw(board):\n",
     "        return 0\n",
     "\n",
     "    if maximizing_player:\n",
-    "        #TO DO\n",
+    "        # AI Strategy\n",
+    "        best_eval = float(\"-inf\")\n",
+    "        for i in range (9):\n",
+    "            if board[i] == \" \":\n",
+    "                board[i] = \"O\"\n",
+    "                eval_i = minimax(board, depth + 1, False)\n",
+    "                board[i] = \" \"\n",
+    "                best_eval = max(best_eval, eval_i)\n",
+    "        return best_eval\n",
+    "        \n",
     "    else:\n",
-    "        #TO DO"
+    "        # Human Strategy\n",
+    "        best_eval = float(\"inf\")\n",
+    "        for i in range (9):\n",
+    "            if board[i] == \" \":\n",
+    "                board[i] = \"X\"\n",
+    "                eval_i = minimax(board, depth + 1, True)\n",
+    "                board[i] = \" \"\n",
+    "                best_eval = max(best_eval, eval_i)\n",
+    "        return best_eval"
    ]
   },
   {
@@ -145,29 +173,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
     "def minimaxAB(board, depth, maximizing_player, alpha, beta):\n",
-    "    #TO DO"
+    "    # Terminal scoring (prefer faster wins, delay losses)\n",
+    "    if check_win(board, \"O\"):\n",
+    "        return 10 - depth\n",
+    "    if check_win(board, \"X\"):\n",
+    "        return -10 + depth\n",
+    "    if check_draw(board):\n",
+    "        return 0\n",
+    "\n",
+    "    if maximizing_player:  # AI (\"O\")\n",
+    "        value = -10_000\n",
+    "        for i in range(9):\n",
+    "            if board[i] == \" \":\n",
+    "                board[i] = \"O\"\n",
+    "                value = max(value, minimaxAB(board, depth + 1, False, alpha, beta))\n",
+    "                board[i] = \" \"\n",
+    "                alpha = max(alpha, value)\n",
+    "                if beta <= alpha:  # prune\n",
+    "                    break\n",
+    "        return value\n",
+    "    else:  # Human (\"X\")\n",
+    "        value = 10_000\n",
+    "        for i in range(9):\n",
+    "            if board[i] == \" \":\n",
+    "                board[i] = \"X\"\n",
+    "                value = min(value, minimaxAB(board, depth + 1, True, alpha, beta))\n",
+    "                board[i] = \" \"\n",
+    "                beta = min(beta, value)\n",
+    "                if beta <= alpha:  # prune\n",
+    "                    break\n",
+    "        return value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to find the best move using the minimax algorithm\n",
     "import math\n",
-    "def best_move(board):\n",
+    "def best_move(board, depth):\n",
     "    best_eval = float(\"-inf\")\n",
     "    best_move = -1\n",
     "    for i in range(9):\n",
     "        if board[i] == \" \":\n",
     "            board[i] = \"O\"\n",
-    "            evaluation = minimax(board, 0, False) #or minimax(board, 0, False, -math.inf, math.inf)\n",
+    "            evaluation = minimaxAB(board, depth, False, -float(\"inf\"), float(\"inf\")) #or minimax(board, 0, False, -math.inf, math.inf)\n",
     "            board[i] = \" \"\n",
     "            if evaluation > best_eval:\n",
     "                best_eval = evaluation\n",
@@ -177,42 +234,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
-    "while True:\n",
-    "    display_board(board)\n",
-    "    player_move = int(input(\"Enter your move (0-8): \"))\n",
-    "    \n",
-    "    if board[player_move] != \" \":\n",
-    "        print(\"Invalid move. Try again.\")\n",
-    "        continue\n",
-    "    \n",
-    "    board[player_move] = \"X\"\n",
-    "    \n",
-    "    if check_win(board, \"X\"):\n",
+    "import random\n",
+    "\n",
+    "def select_next_move(board, random_player: bool):\n",
+    "   \n",
+    "    empties = [i for i, c in enumerate(board) if c == \" \"]\n",
+    "    if not empties:\n",
+    "        return -1\n",
+    "\n",
+    "    if random_player:\n",
+    "        return random.choice(empties)\n",
+    "\n",
+    "    while True:\n",
+    "        try:\n",
+    "            i = int(input(\"Enter your move (0-8): \"))\n",
+    "            if i in empties:\n",
+    "                return i\n",
+    "            print(\"Invalid move. Pick an empty cell 0–8 that isn’t taken.\")\n",
+    "        except ValueError:\n",
+    "            print(\"Please enter a number 0–8.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_game(randomPlayer: bool, depth):\n",
+    "    while True:\n",
     "        display_board(board)\n",
-    "        print(\"You win!\")\n",
-    "        break\n",
-    "    \n",
-    "    if check_draw(board):\n",
-    "        display_board(board)\n",
-    "        print(\"It's a draw!\")\n",
-    "        break\n",
-    "    \n",
-    "    ai_move = best_move(board)\n",
-    "    board[ai_move] = \"O\"\n",
-    "    \n",
-    "    if check_win(board, \"O\"):\n",
-    "        display_board(board)\n",
-    "        print(\"AI wins!\")\n",
-    "        break\n",
-    "    \n",
-    "    if check_draw(board):\n",
-    "        display_board(board)\n",
-    "        print(\"It's a draw!\")\n",
-    "        break"
+    "\n",
+    "        player_move = select_next_move(board, randomPlayer)\n",
+    "        \n",
+    "        if board[player_move] != \" \":\n",
+    "            print(\"Invalid move. Try again.\")\n",
+    "            continue\n",
+    "        \n",
+    "        board[player_move] = \"X\"\n",
+    "        \n",
+    "        if check_win(board, \"X\"):\n",
+    "            display_board(board)\n",
+    "            print(\"You win!\")\n",
+    "            break\n",
+    "        \n",
+    "        ai_move = best_move(board, depth)\n",
+    "        board[ai_move] = \"O\"\n",
+    "        \n",
+    "        if check_win(board, \"O\"):\n",
+    "            display_board(board)\n",
+    "            print(\"AI wins!\")\n",
+    "            break\n",
+    "        \n",
+    "        if check_draw(board):\n",
+    "            display_board(board)\n",
+    "            print(\"It's a draw!\")\n",
+    "            break"
    ]
   },
   {
@@ -224,11 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TO DO: "
+    "# play_game(False, 0)\n",
+    "\n",
+    "# play_game(True, 0)\n"
    ]
   },
   {
@@ -240,11 +323,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 387,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------\n",
+      "\n",
+      "  |   |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "O |   |  \n",
+      "---------\n",
+      "  | X |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "O |   | O\n",
+      "---------\n",
+      "  | X |  \n",
+      "---------\n",
+      "  |   | X\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "O | O | O\n",
+      "---------\n",
+      "  | X |  \n",
+      "---------\n",
+      "X |   | X\n",
+      "AI wins!\n"
+     ]
+    }
+   ],
    "source": [
-    "#TO DO: "
+    "play_game(True, 5)"
    ]
   }
  ],
@@ -255,9 +378,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "ai_labs_env",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -269,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
