--- a/Lab 5/Lab5MinMax.ipynb
+++ b/Lab 5/Lab5MinMax.ipynb
@@ -42,16 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "board = [\" \" for _ in range(9)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
     "                board[i] = \"X\"\n",
     "                eval_i = minimax(board, depth + 1, True)\n",
     "                board[i] = \" \"\n",
-    "                best_eval = max(best_eval, eval_i)\n",
+    "                best_eval = min(best_eval, eval_i)\n",
     "        return best_eval"
    ]
   },
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
     "        return 0\n",
     "\n",
     "    if maximizing_player:  # AI (\"O\")\n",
-    "        value = -10_000\n",
+    "        value = -math.inf\n",
     "        for i in range(9):\n",
     "            if board[i] == \" \":\n",
     "                board[i] = \"O\"\n",
@@ -198,7 +199,7 @@
     "                    break\n",
     "        return value\n",
     "    else:  # Human (\"X\")\n",
-    "        value = 10_000\n",
+    "        value = math.inf\n",
     "        for i in range(9):\n",
     "            if board[i] == \" \":\n",
     "                board[i] = \"X\"\n",
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +225,7 @@
     "    for i in range(9):\n",
     "        if board[i] == \" \":\n",
     "            board[i] = \"O\"\n",
-    "            evaluation = minimaxAB(board, depth, False, -float(\"inf\"), float(\"inf\")) #or minimax(board, 0, False, -math.inf, math.inf)\n",
+    "            evaluation = minimax(board, depth, False) #or minimax(board, 0, False, -math.inf, math.inf)\n",
     "            board[i] = \" \"\n",
     "            if evaluation > best_eval:\n",
     "                best_eval = evaluation\n",
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [
     {
@@ -343,25 +344,25 @@
       "\n",
       "O |   |  \n",
       "---------\n",
-      "  | X |  \n",
+      "  |   | X\n",
       "---------\n",
       "  |   |  \n",
       "\n",
       "--------------------\n",
       "\n",
-      "O |   | O\n",
+      "O |   |  \n",
       "---------\n",
-      "  | X |  \n",
+      "X | O | X\n",
       "---------\n",
-      "  |   | X\n",
+      "  |   |  \n",
       "\n",
       "--------------------\n",
       "\n",
-      "O | O | O\n",
+      "O | X |  \n",
       "---------\n",
-      "  | X |  \n",
+      "X | O | X\n",
       "---------\n",
-      "X |   | X\n",
+      "  |   | O\n",
       "AI wins!\n"
      ]
     }
